--- a/.github/workflows/check-buildah-remote.yaml
+++ b/.github/workflows/check-buildah-remote.yaml
@@ -9,9 +9,9 @@ jobs:
     name: Check Buildah Remote
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8   # v5
+      - uses: actions/checkout@v5.0.0
       - name: Install Go
-        uses: actions/setup-go@44694675825211faa026b3c33043df3e48a5fa00   # v6
+        uses: actions/setup-go@v6.0.0
         with:
           go-version-file: './task-generator/remote/go.mod'
       - name: Check buildah remote
