--- a/.github/workflows/run-task-tests.yaml
+++ b/.github/workflows/run-task-tests.yaml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Get all changed files in the PR from task directory
         id: changed-dirs
-        uses: tj-actions/changed-files@d03a93c0dbfac6d6dd6a0d8a5e7daff992b07449
+        uses: tj-actions/changed-files@v47
         with:
           files: |
             # Any task yaml or script (including its tests) is changed
