--- a/task/buildah-min/0.6/buildah-min.yaml
+++ b/task/buildah-min/0.6/buildah-min.yaml
@@ -228,6 +228,11 @@ spec:
       if SOURCE_DATE_EPOCH is not defined.
     name: REWRITE_TIMESTAMP
     type: string
+  - default: "false"
+    description: Don't inject a content-sets.json or a labels.json file. This requires
+      that the canonical Containerfile takes care of this itself.
+    name: SKIP_INJECTIONS
+    type: string
   results:
   - description: Digest of the image just built
     name: IMAGE_DIGEST
@@ -303,6 +308,8 @@ spec:
       value: $(params.BUILD_TIMESTAMP)
     - name: CONTEXTUALIZE_SBOM
       value: $(params.CONTEXTUALIZE_SBOM)
+    - name: SKIP_INJECTIONS
+      value: $(params.SKIP_INJECTIONS)
     imagePullPolicy: IfNotPresent
     volumeMounts:
     - mountPath: /shared
@@ -445,7 +452,9 @@ spec:
       if [ "${ICM_KEEP_COMPAT_LOCATION}" = "true" ]; then
         icm_opts+=(-c)
       fi
-      inject-icm-to-containerfile "${icm_opts[@]}" "$dockerfile_copy" "/var/workdir/cachi2/output/bom.json" "$SOURCE_CODE_DIR/$CONTEXT"
+      if [ "${SKIP_INJECTIONS}" = "false" ]; then
+        inject-icm-to-containerfile "${icm_opts[@]}" "$dockerfile_copy" "/var/workdir/cachi2/output/bom.json" "$SOURCE_CODE_DIR/$CONTEXT"
+      fi
 
       echo "[$(date --utc -Ins)] Prepare system (architecture: $(uname -m))"
 
@@ -736,12 +745,14 @@ spec:
 
       jq '.' "$SOURCE_CODE_DIR/$CONTEXT/labels.json"
 
-      echo "" >>"$dockerfile_copy"
-      # Always write labels.json to the new standard location
-      echo 'COPY labels.json /usr/share/buildinfo/labels.json' >>"$dockerfile_copy"
-      # Conditionally write to the old location for backward compatibility
-      if [ "${ICM_KEEP_COMPAT_LOCATION}" = "true" ]; then
-        echo 'COPY labels.json /root/buildinfo/labels.json' >>"$dockerfile_copy"
+      if [ "${SKIP_INJECTIONS}" = "false" ]; then
+        echo "" >>"$dockerfile_copy"
+        # Always write labels.json to the new standard location
+        echo 'COPY labels.json /usr/share/buildinfo/labels.json' >>"$dockerfile_copy"
+        # Conditionally write to the old location for backward compatibility
+        if [ "${ICM_KEEP_COMPAT_LOCATION}" = "true" ]; then
+          echo 'COPY labels.json /root/buildinfo/labels.json' >>"$dockerfile_copy"
+        fi
       fi
 
       # Make sure our labels.json file isn't filtered out
