--- a/task/buildah-oci-ta/0.6/buildah-oci-ta.yaml
+++ b/task/buildah-oci-ta/0.6/buildah-oci-ta.yaml
@@ -174,6 +174,12 @@ spec:
         - must be in the same format.'
       type: string
       default: spdx
+    - name: SKIP_INJECTIONS
+      description: Don't inject a content-sets.json or a labels.json file.
+        This requires that the canonical Containerfile takes care of this
+        itself.
+      type: string
+      default: "false"
     - name: SKIP_SBOM_GENERATION
       description: Skip SBOM-related operations. This will likely cause EC
         policies to fail if enabled
@@ -330,6 +336,8 @@ spec:
         value: $(params.SBOM_SYFT_SELECT_CATALOGERS)
       - name: SBOM_TYPE
         value: $(params.SBOM_TYPE)
+      - name: SKIP_INJECTIONS
+        value: $(params.SKIP_INJECTIONS)
       - name: SKIP_SBOM_GENERATION
         value: $(params.SKIP_SBOM_GENERATION)
       - name: SKIP_UNUSED_STAGES
@@ -517,7 +525,9 @@ spec:
         if [ "${ICM_KEEP_COMPAT_LOCATION}" = "true" ]; then
           icm_opts+=(-c)
         fi
-        inject-icm-to-containerfile "${icm_opts[@]}" "$dockerfile_copy" "/var/workdir/cachi2/output/bom.json" "$SOURCE_CODE_DIR/$CONTEXT"
+        if [ "${SKIP_INJECTIONS}" = "false" ]; then
+          inject-icm-to-containerfile "${icm_opts[@]}" "$dockerfile_copy" "/var/workdir/cachi2/output/bom.json" "$SOURCE_CODE_DIR/$CONTEXT"
+        fi
 
         echo "[$(date --utc -Ins)] Prepare system (architecture: $(uname -m))"
 
@@ -816,12 +826,14 @@ spec:
 
         jq '.' "$SOURCE_CODE_DIR/$CONTEXT/labels.json"
 
-        echo "" >>"$dockerfile_copy"
-        # Always write labels.json to the new standard location
-        echo 'COPY labels.json /usr/share/buildinfo/labels.json' >>"$dockerfile_copy"
-        # Conditionally write to the old location for backward compatibility
-        if [ "${ICM_KEEP_COMPAT_LOCATION}" = "true" ]; then
-          echo 'COPY labels.json /root/buildinfo/labels.json' >>"$dockerfile_copy"
+        if [ "${SKIP_INJECTIONS}" = "false" ]; then
+          echo "" >>"$dockerfile_copy"
+          # Always write labels.json to the new standard location
+          echo 'COPY labels.json /usr/share/buildinfo/labels.json' >>"$dockerfile_copy"
+          # Conditionally write to the old location for backward compatibility
+          if [ "${ICM_KEEP_COMPAT_LOCATION}" = "true" ]; then
+            echo 'COPY labels.json /root/buildinfo/labels.json' >>"$dockerfile_copy"
+          fi
         fi
 
         # Make sure our labels.json file isn't filtered out
