fix(KFLUXVNGD-514): update buildah tasks to use caching-ca-bundle
This commit updates the buildah tasks to use the new `caching-ca-bundle`
ConfigMap name instead of `proxy-ca-bundle`.

Signed-off-by: Avi Biton <abiton@redhat.com>

--- a/task/buildah-min/0.6/buildah-min.yaml
+++ b/task/buildah-min/0.6/buildah-min.yaml
@@ -191,7 +191,7 @@ spec:
       HTTP/HTTPS proxy.
     name: NO_PROXY
     type: string
-  - default: proxy-ca-bundle
+  - default: caching-ca-bundle
     description: The name of the ConfigMap to read proxy CA bundle data from.
     name: PROXY_CA_TRUST_CONFIG_MAP_NAME
     type: string
