--- a/task/buildah-oci-ta/0.6/buildah-oci-ta.yaml
+++ b/task/buildah-oci-ta/0.6/buildah-oci-ta.yaml
@@ -149,7 +149,7 @@ spec:
       description: The name of the ConfigMap to read proxy CA bundle data
         from.
       type: string
-      default: proxy-ca-bundle
+      default: caching-ca-bundle
     - name: REWRITE_TIMESTAMP
       description: Clamp mtime of all files to at most SOURCE_DATE_EPOCH.
         Does nothing if SOURCE_DATE_EPOCH is not defined.
