--- a/task/buildah-remote-oci-ta/0.6/buildah-remote-oci-ta.yaml
+++ b/task/buildah-remote-oci-ta/0.6/buildah-remote-oci-ta.yaml
@@ -142,7 +142,7 @@ spec:
       data.
     name: PROXY_CA_TRUST_CONFIG_MAP_KEY
     type: string
-  - default: proxy-ca-bundle
+  - default: caching-ca-bundle
     description: The name of the ConfigMap to read proxy CA bundle data from.
     name: PROXY_CA_TRUST_CONFIG_MAP_NAME
     type: string
