--- a/task/buildah/0.6/buildah.yaml
+++ b/task/buildah/0.6/buildah.yaml
@@ -181,7 +181,7 @@ spec:
   - name: PROXY_CA_TRUST_CONFIG_MAP_NAME
     type: string
     description: The name of the ConfigMap to read proxy CA bundle data from.
-    default: proxy-ca-bundle
+    default: caching-ca-bundle
   - name: PROXY_CA_TRUST_CONFIG_MAP_KEY
     type: string
     description: The name of the key in the ConfigMap that contains the proxy CA bundle data.
