--- a/task/buildah-remote/0.6/buildah-remote.yaml
+++ b/task/buildah-remote/0.6/buildah-remote.yaml
@@ -191,7 +191,7 @@ spec:
       HTTP/HTTPS proxy.
     name: NO_PROXY
     type: string
-  - default: proxy-ca-bundle
+  - default: caching-ca-bundle
     description: The name of the ConfigMap to read proxy CA bundle data from.
     name: PROXY_CA_TRUST_CONFIG_MAP_NAME
     type: string
