chore(KFLUXVNGD-518): update init task to include enable-cache-proxy parameter
- This commit updates the init task to include a new parameter called
`enable-cache-proxy`.
This parameter is optional and used to enable the cache proxy
configuration, defaults to false.
- It also updates all the build pipelines to include the new parameter
and the results from the init task.
- Bumped the version of the init task to 0.2.4.
- Added a migration script to add the new parameter to the init task and to buildah tasks.

Signed-off-by: Avi Biton <abiton@redhat.com>

--- a/pipelines/core-services/patch.yaml
+++ b/pipelines/core-services/patch.yaml
@@ -82,13 +82,14 @@
 #     10  build-source-image
 #     11  build-image-index
 #     12  buildah-format
-#     13  build-args
-#     14  build-args-file
-#     15  privileged-nested
+#     13  enable-cache-proxy
+#     14  build-args
+#     15  build-args-file
+#     16  privileged-nested
 
 # Remove privilege-nested pipeline param
 - op: remove
-  path: /spec/params/15
+  path: /spec/params/16
 # We want to always build OCI images by default
 - op: replace
   path: /spec/params/12/default  # buildah-format
