--- a/pipelines/docker-build/patch.yaml
+++ b/pipelines/docker-build/patch.yaml
@@ -93,6 +93,10 @@
     value: "$(tasks.clone-repository.results.url)"
   - name: BUILDAH_FORMAT
     value: "$(params.buildah-format)"
+  - name: HTTP_PROXY
+    value: "$(tasks.init.results.http-proxy)"
+  - name: NO_PROXY
+    value: "$(tasks.init.results.no-proxy)"
 
 # FIXME: duplicate the "add" operations for sast-coverity-check, which is based on build-container
 - op: test
