--- a/task/prefetch-dependencies-oci-ta/0.2/prefetch-dependencies-oci-ta.yaml
+++ b/task/prefetch-dependencies-oci-ta/0.2/prefetch-dependencies-oci-ta.yaml
@@ -65,6 +65,11 @@ spec:
     - name: log-level
       description: Set prefetch tool log level (debug, info, warning, error)
       default: info
+    - name: mode
+      description: 'Control how input requirement violations are handled:
+        strict (errors) or permissive (warnings).'
+      type: string
+      default: strict
     - name: ociArtifactExpiresAfter
       description: Expiration date for the trusted artifacts created in the
         OCI repository. An empty string means the artifacts do not expire.
@@ -178,6 +183,8 @@ spec:
           value: $(params.log-level)
         - name: SBOM_TYPE
           value: $(params.sbom-type)
+        - name: MODE
+          value: $(params.mode)
         - name: WORKSPACE_GIT_AUTH_BOUND
           value: $(workspaces.git-basic-auth.bound)
         - name: WORKSPACE_GIT_AUTH_PATH
@@ -414,7 +421,7 @@ spec:
         fi
         unset RETRY_MAX_TRIES
 
-        hermeto --log-level="$LOG_LEVEL" $config_flag fetch-deps \
+        hermeto --log-level="$LOG_LEVEL" --mode="$MODE" $config_flag fetch-deps \
           $dev_pacman_flag \
           --source="/var/workdir/source" \
           --output="/var/workdir/cachi2/output" \
