task/buildah*: re-inherit base image labels
Effectively reverts b5bf2f390c8dba80a5432de41e83739e4320a575

The change was breaking for more users than expected. Revert it to
reduce disruption until we can find a less drastic way to go about it.

Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/task/buildah-min/0.7/buildah-min.yaml
+++ b/task/buildah-min/0.7/buildah-min.yaml
@@ -6,7 +6,7 @@ metadata:
     tekton.dev/pipelines.minVersion: 0.12.1
     tekton.dev/tags: image-build, konflux
   labels:
-    app.kubernetes.io/version: "0.7"
+    app.kubernetes.io/version: 0.7.1
     build.appstudio.redhat.com/build_type: docker
   name: buildah-min
 spec:
@@ -177,7 +177,7 @@ spec:
       the build (see the CONTEXT param).
     name: WORKINGDIR_MOUNT
     type: string
-  - default: "false"
+  - default: "true"
     description: Determines if the image inherits the base image labels.
     name: INHERIT_BASE_IMAGE_LABELS
     type: string
