--- a/task/buildah-remote-oci-ta/0.7/buildah-remote-oci-ta.yaml
+++ b/task/buildah-remote-oci-ta/0.7/buildah-remote-oci-ta.yaml
@@ -6,7 +6,7 @@ metadata:
     tekton.dev/tags: image-build, konflux
   creationTimestamp: null
   labels:
-    app.kubernetes.io/version: "0.7"
+    app.kubernetes.io/version: 0.7.1
     build.appstudio.redhat.com/build_type: docker
   name: buildah-remote-oci-ta
 spec:
@@ -109,7 +109,7 @@ spec:
       respectively.
     name: IMAGE_EXPIRES_AFTER
     type: string
-  - default: "false"
+  - default: "true"
     description: Determines if the image inherits the base image labels.
     name: INHERIT_BASE_IMAGE_LABELS
     type: string
