--- a/task/buildah/0.7/buildah.yaml
+++ b/task/buildah/0.7/buildah.yaml
@@ -2,7 +2,7 @@ apiVersion: tekton.dev/v1
 kind: Task
 metadata:
   labels:
-    app.kubernetes.io/version: "0.7"
+    app.kubernetes.io/version: "0.7.1"
     build.appstudio.redhat.com/build_type: "docker"
   annotations:
     tekton.dev/pipelines.minVersion: "0.12.1"
@@ -167,7 +167,7 @@ spec:
   - name: INHERIT_BASE_IMAGE_LABELS
     description: Determines if the image inherits the base image labels.
     type: string
-    default: "false"
+    default: "true"
   - name: HTTP_PROXY
     description: >-
       HTTP/HTTPS proxy to use for the buildah pull and build operations.
