--- a/task/buildah-oci-ta/0.7/buildah-oci-ta.yaml
+++ b/task/buildah-oci-ta/0.7/buildah-oci-ta.yaml
@@ -7,7 +7,7 @@ metadata:
     tekton.dev/pipelines.minVersion: 0.12.1
     tekton.dev/tags: image-build, konflux
   labels:
-    app.kubernetes.io/version: "0.7"
+    app.kubernetes.io/version: 0.7.1
     build.appstudio.redhat.com/build_type: docker
 spec:
   description: |-
@@ -114,7 +114,7 @@ spec:
     - name: INHERIT_BASE_IMAGE_LABELS
       description: Determines if the image inherits the base image labels.
       type: string
-      default: "false"
+      default: "true"
     - name: LABELS
       description: Additional key=value labels that should be applied to the
         image
