--- a/task/buildah-remote/0.7/buildah-remote.yaml
+++ b/task/buildah-remote/0.7/buildah-remote.yaml
@@ -6,7 +6,7 @@ metadata:
     tekton.dev/tags: image-build, konflux
   creationTimestamp: null
   labels:
-    app.kubernetes.io/version: "0.7"
+    app.kubernetes.io/version: 0.7.1
     build.appstudio.redhat.com/build_type: docker
   name: buildah-remote
 spec:
@@ -177,7 +177,7 @@ spec:
       the build (see the CONTEXT param).
     name: WORKINGDIR_MOUNT
     type: string
-  - default: "false"
+  - default: "true"
     description: Determines if the image inherits the base image labels.
     name: INHERIT_BASE_IMAGE_LABELS
     type: string
